src/_static.mojo


# @always_inline
# fn has_current_point(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> cairo_bool_t:
#     return external_call["cairo_has_current_point", cairo_bool_t, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn get_current_point(cr: UnsafePointer[__CairoT, MutExternalOrigin], x: UnsafePointer[c_double, MutExternalOrigin], y: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_get_current_point", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](cr, x, y)

# @always_inline
# fn get_fill_rule(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_get_fill_rule", c_int, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn get_line_width(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> c_double:
#     return external_call["cairo_get_line_width", c_double, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn get_hairline(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> cairo_bool_t:
#     return external_call["cairo_get_hairline", cairo_bool_t, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn get_line_cap(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> cairo_line_cap_t:
#     return CairoLineCapT(external_call["cairo_get_line_cap", c_int, UnsafePointer[__CairoT, MutExternalOrigin]](cr))

# @always_inline
# fn get_line_join(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> cairo_line_join_t:
#     return CairoLineJoinT(external_call["cairo_get_line_join", c_int, UnsafePointer[__CairoT, MutExternalOrigin]](cr))

# @always_inline
# fn get_miter_limit(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> c_double:
#     return external_call["cairo_get_miter_limit", c_double, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn get_dash_count(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_get_dash_count", c_int, UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn get_dash(cr: UnsafePointer[__CairoT, MutExternalOrigin], dashes: UnsafePointer[c_double, MutExternalOrigin], offset: UnsafePointer[c_double, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_get_dash", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin], UnsafePointer[c_double, MutExternalOrigin]](cr, dashes, offset)

# @always_inline
# fn get_matrix(cr: UnsafePointer[__CairoT, MutExternalOrigin], matrix: UnsafePointer[__CairoMatrixT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_get_matrix", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoMatrixT, MutExternalOrigin]](cr, matrix)

# @always_inline
# fn get_target(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> UnsafePointer[__CairoSurfaceT, MutExternalOrigin]:
#     return external_call["cairo_get_target", UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn get_group_target(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> UnsafePointer[__CairoSurfaceT, MutExternalOrigin]:
#     return external_call["cairo_get_group_target", UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn copy_path(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> UnsafePointer[__CairoPathT, MutExternalOrigin]:
#     return external_call["cairo_copy_path", UnsafePointer[__CairoPathT, MutExternalOrigin], UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn copy_path_flat(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> UnsafePointer[__CairoPathT, MutExternalOrigin]:
#     return external_call["cairo_copy_path_flat", UnsafePointer[__CairoPathT, MutExternalOrigin], UnsafePointer[__CairoT, MutExternalOrigin]](cr)

# @always_inline
# fn append_path(cr: UnsafePointer[__CairoT, MutExternalOrigin], path: UnsafePointer[__CairoPathT, ImmutExternalOrigin]) -> NoneType:
#     return external_call["cairo_append_path", NoneType, UnsafePointer[__CairoT, MutExternalOrigin], UnsafePointer[__CairoPathT, ImmutExternalOrigin]](cr, path)

# @always_inline
# fn path_destroy(path: UnsafePointer[__CairoPathT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_path_destroy", NoneType, UnsafePointer[__CairoPathT, MutExternalOrigin]](path)

# @always_inline
# fn status(cr: UnsafePointer[__CairoT, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_status", c_int, UnsafePointer[__CairoT, MutExternalOrigin]](cr))

# @always_inline
# fn status_to_string(status: cairo_status_t) -> UnsafePointer[c_char, ImmutExternalOrigin]:
#     return external_call["cairo_status_to_string", UnsafePointer[c_char, ImmutExternalOrigin], c_int](status.value)

# @always_inline
# fn device_reference(device: UnsafePointer[__CairoDeviceT, MutExternalOrigin]) -> UnsafePointer[__CairoDeviceT, MutExternalOrigin]:
#     return external_call["cairo_device_reference", UnsafePointer[__CairoDeviceT, MutExternalOrigin], UnsafePointer[__CairoDeviceT, MutExternalOrigin]](device)

# @always_inline
# fn device_get_type(device: UnsafePointer[__CairoDeviceT, MutExternalOrigin]) -> c_int:
#     return external_call["cairo_device_get_type", c_int, UnsafePointer[__CairoDeviceT, MutExternalOrigin]](device)

# @always_inline
# fn device_status(device: UnsafePointer[__CairoDeviceT, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_device_status", c_int, UnsafePointer[__CairoDeviceT, MutExternalOrigin]](device))

# @always_inline
# fn device_acquire(device: UnsafePointer[__CairoDeviceT, MutExternalOrigin]) -> cairo_status_t:
#     return CairoStatusT(external_call["cairo_device_acquire", c_int, UnsafePointer[__CairoDeviceT, MutExternalOrigin]](device))

# @always_inline
# fn device_release(device: UnsafePointer[__CairoDeviceT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_device_release", NoneType, UnsafePointer[__CairoDeviceT, MutExternalOrigin]](device)

# @always_inline
# fn device_flush(device: UnsafePointer[__CairoDeviceT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_device_flush", NoneType, UnsafePointer[__CairoDeviceT, MutExternalOrigin]](device)

# @always_inline
# fn device_finish(device: UnsafePointer[__CairoDeviceT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_device_finish", NoneType, UnsafePointer[__CairoDeviceT, MutExternalOrigin]](device)

# @always_inline
# fn device_destroy(device: UnsafePointer[__CairoDeviceT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_device_destroy", NoneType, UnsafePointer[__CairoDeviceT, MutExternalOrigin]](device)

# @always_inline
# fn device_get_reference_count(device: UnsafePointer[__CairoDeviceT, MutExternalOrigin]) -> c_uint:
#     return external_call["cairo_device_get_reference_count", c_uint, UnsafePointer[__CairoDeviceT, MutExternalOrigin]](device)

# @always_inline
# fn surface_create_similar(other: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], content: c_int, width: c_int, height: c_int) -> UnsafePointer[__CairoSurfaceT, MutExternalOrigin]:
#     return external_call["cairo_surface_create_similar", UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[__CairoSurfaceT, MutExternalOrigin], c_int, c_int, c_int](other, content, width, height)

# @always_inline
# fn surface_create_similar_image(other: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], format: cairo_format_t, width: c_int, height: c_int) -> UnsafePointer[__CairoSurfaceT, MutExternalOrigin]:
#     return external_call["cairo_surface_create_similar_image", UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[__CairoSurfaceT, MutExternalOrigin], c_int, c_int, c_int](other, format.value, width, height)

# @always_inline
# fn surface_map_to_image(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], extents: UnsafePointer[__CairoRectangleIntT, ImmutExternalOrigin]) -> UnsafePointer[__CairoSurfaceT, MutExternalOrigin]:
#     return external_call["cairo_surface_map_to_image", UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[__CairoRectangleIntT, ImmutExternalOrigin]](surface, extents)

# @always_inline
# fn surface_unmap_image(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], image: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> NoneType:
#     return external_call["cairo_surface_unmap_image", NoneType, UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface, image)

# @always_inline
# fn surface_create_for_rectangle(target: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], x: c_double, y: c_double, width: c_double, height: c_double) -> UnsafePointer[__CairoSurfaceT, MutExternalOrigin]:
#     return external_call["cairo_surface_create_for_rectangle", UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[__CairoSurfaceT, MutExternalOrigin], c_double, c_double, c_double, c_double](target, x, y, width, height)

# @always_inline
# fn surface_create_observer(target: UnsafePointer[__CairoSurfaceT, MutExternalOrigin], mode: cairo_surface_observer_mode_t) -> UnsafePointer[__CairoSurfaceT, MutExternalOrigin]:
#     return external_call["cairo_surface_create_observer", UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[__CairoSurfaceT, MutExternalOrigin], c_int](target, mode.value)

# @always_inline
# fn surface_observer_elapsed(abstract_surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> c_double:
#     return external_call["cairo_surface_observer_elapsed", c_double, UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](abstract_surface)

# @always_inline
# fn device_observer_elapsed(abstract_device: UnsafePointer[__CairoDeviceT, MutExternalOrigin]) -> c_double:
#     return external_call["cairo_device_observer_elapsed", c_double, UnsafePointer[__CairoDeviceT, MutExternalOrigin]](abstract_device)

# @always_inline
# fn device_observer_paint_elapsed(abstract_device: UnsafePointer[__CairoDeviceT, MutExternalOrigin]) -> c_double:
#     return external_call["cairo_device_observer_paint_elapsed", c_double, UnsafePointer[__CairoDeviceT, MutExternalOrigin]](abstract_device)

# @always_inline
# fn device_observer_mask_elapsed(abstract_device: UnsafePointer[__CairoDeviceT, MutExternalOrigin]) -> c_double:
#     return external_call["cairo_device_observer_mask_elapsed", c_double, UnsafePointer[__CairoDeviceT, MutExternalOrigin]](abstract_device)

# @always_inline
# fn device_observer_fill_elapsed(abstract_device: UnsafePointer[__CairoDeviceT, MutExternalOrigin]) -> c_double:
#     return external_call["cairo_device_observer_fill_elapsed", c_double, UnsafePointer[__CairoDeviceT, MutExternalOrigin]](abstract_device)

# @always_inline
# fn device_observer_stroke_elapsed(abstract_device: UnsafePointer[__CairoDeviceT, MutExternalOrigin]) -> c_double:
#     return external_call["cairo_device_observer_stroke_elapsed", c_double, UnsafePointer[__CairoDeviceT, MutExternalOrigin]](abstract_device)

# @always_inline
# fn device_observer_glyphs_elapsed(abstract_device: UnsafePointer[__CairoDeviceT, MutExternalOrigin]) -> c_double:
#     return external_call["cairo_device_observer_glyphs_elapsed", c_double, UnsafePointer[__CairoDeviceT, MutExternalOrigin]](abstract_device)

# @always_inline
# fn surface_reference(surface: UnsafePointer[__CairoSurfaceT, MutExternalOrigin]) -> UnsafePointer[__CairoSurfaceT, MutExternalOrigin]:
#     return external_call["cairo_surface_reference", UnsafePointer[__CairoSurfaceT, MutExternalOrigin], UnsafePointer[__CairoSurfaceT, MutExternalOrigin]](surface)
